k8s/frontend/httproute.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: frontend
spec:
  parentRefs:
  - kind: Gateway
    name: gateway
  rules:
  - matches:
    - path:
        value: /
    backendRefs:
    - name: frontend
      port: 80
