k8s/frontend/ingress-1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-1
spec:
  defaultBackend:
    service:
      name: frontend
      port:
        number: 80
