k8s/frontend/ingress-2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-2
spec:
  defaultBackend:
    service:
      name: frontend
      port:
        number: 80
  rules:
  - http:
      paths:
      - path: /create
        pathType: Exact
        backend:
          service:
            name: backend
            port:
              number: 5000
      - path: /read
        pathType: Exact
        backend:
          service:
            name: backend
            port:
              number: 5000
      - path: /update
        pathType: Exact
        backend:
          service:
            name: backend
            port:
              number: 5000
      - path: /delete
        pathType: Exact
        backend:
          service:
            name: backend
            port:
              number: 5000
